<package format="2">
	<name>foobar</name>
	<version>1.2.4</version>
	<description>
	This package is my own package for test purposes.
	</description>
	<maintainer email="szymon3k@gmail.com">PR-foobar</maintainer>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
</package>
